# active_object_detection

./: README.md
active_vision_pkg/: CMakeLists.txt  mainpage.dox  manifest.xml
active_vision_pkg/data/: hypotheses.txt  obj_list.txt  plan_vps.txt
active_vision_pkg/data/sarsop_data/: cMap.txt  fMap.txt  id_x_ovp_x_score.txt  oMap.txt  plan_0.policy
active_vision_pkg/include/: hypothesis.hpp  obj.hpp  ss_arbiter.hpp  ss_decider.hpp  test1.hpp
active_vision_pkg/launch/: test_smart_sensor.launch
active_vision_pkg/rviz_cfg/: test_fastarb.vcg  test_smart_sensor.vcg  test_smart_sensor_test.vcg
active_vision_pkg/script/: compute_Javidi_policy.m  fastarb_eval  generate_hypotheses.m  javidi_tsp.m  tst_bash  visualize_oMap.m  write_jpol.m
active_vision_pkg/src/: run_ss_decider_offline.cpp  run_ss_decider_online.cpp  ss_arbiter.cpp  ss_decider.cpp  ss_fastarb.cpp
gazebo_simulation/: CMakeLists.txt  mainpage.dox  manifest.xml
gazebo_simulation/Media/misc_urdf/: objects1.urdf.xacro  sushi_walls.urdf  table.urdf.xacro
gazebo_simulation/Media/models/: airship.dae  apples.dae  barrels.dae  big_water_bottle.dae  bottles.dae  bourbon.dae  broom.dae  bucket.dae  carton_box.dae  cartridges.dae  coffee_mug.dae  cokecan.dae  cola_cup.dae  desk_lab.model  desklamp.dae  eraser.dae  flowerdecor.dae  flowerspray.dae  gastank.dae  gift_box.dae  jug.dae  nightlamp.dae  oiltank.dae  oilvinegar.dae  pendant.dae  plasticwaterbottle.dae  pot.dae  robothead.dae  shovel.dae  vases.dae  warbear.dae  waterbottle.dae  watercan.dae  weapons.dae  wine_glass.dae
gazebo_simulation/Media/robots/: pr2_asus_arm.xml  pr2_with_kinect_arm.urdf  pr2_with_kinect_arm.urdf.xacro
gazebo_simulation/Media/tables/: grasp_table.urdf.xacro  handlebottle_on_table.model
gazebo_simulation/Media/tabletop_objects/: airship.urdf  apples.urdf  axe.urdf  barrels.urdf  bathroomkit.urdf  big_water_bottle.urdf  bigbox.urdf  bottles.urdf  bourbon.urdf  broom.urdf  brush.urdf  bucket.urdf  carton_box.urdf  cartridges.urdf  coffee_mug.urdf  cokecan.urdf  cola_cup.urdf  cups.urdf  desklamp.urdf  eggcrate.urdf  eraser.urdf  flowerdecor.urdf  flowerspray.urdf  gastank.urdf  gift_box.urdf  glasses.urdf  handlebottle.urdf  heavyranch.urdf  jug.urdf  nightlamp.urdf  oiltank.urdf  oilvinegar.urdf  pan.urdf  pendant.urdf  pipe.urdf  plasticwaterbottle.urdf  pot.urdf  robothead.urdf  shovel.urdf  spadefork.urdf  (+8 more)
gazebo_simulation/Media/tabletops/: color_testscene_grasp.urdf
gazebo_simulation/Media/walls/: grasp_wall_2.9.model  grasp_wall_3.1.model  grasp_wall_3.9.model  simple_wall.model  simple_wall_10.model  simple_wall_15.model  simple_wall_3.model  simple_wall_6.model
gazebo_simulation/Media/worlds/: base.world  color_testscene_grasp.world  example.world  ground_plane.sdf  simple_office.world  simulation_world.world
gazebo_simulation/config/: pr2_planning_description.yaml
gazebo_simulation/config/collision_config/: self_filter_right_left.yaml
gazebo_simulation/config/sbpl_fullbody_config/: pr2_body.yaml  pr2_both_arms_pr2-table-experiment-gt.yaml
gazebo_simulation/include/gazebo_simulation/: pr2_client.hpp
gazebo_simulation/launch/: 3d_map_build.launch  active_vision.launch  complete_sim.launch  complete_sim_run.launch  pr2_no_controllers.launch  scene_launch.launch  simple_sim.launch  spawn_grasp.launch  spawn_objects.launch  upload_pr2.launch
gazebo_simulation/launch/mapping/: 2d_map_build.launch  3d_map_build_post.launch  3d_map_build_pre.launch
gazebo_simulation/launch/pr2_main_functionality/: pr2_localization.launch  pr2_main_functionality.launch  pr2_perception.launch  pr2_planning.launch  pr2_two_arm_controller.launch
gazebo_simulation/maps/: map-colortable-sim.bt  map-colortable-sim.yaml  map-grasp-lab-sim.bt  map-grasp-lab-sim.yaml  map-grasp-lab.pcd  map-pr2-table-experiment-gt.bt  map-pr2-table-experiment-gt.yaml  map-pr2-table-experiment-gt_old_2.bt  map-pr2-table-experiment.bt  map-pr2-table-experiment.yaml  map-thomas.bt  map-thomas.yaml  map-upenn-simulation.yaml
gazebo_simulation/rviz_cfg/: 2d_map_build.vcg  3d_map_build.vcg  complete_sim.vcg  pr2_client.vcg
gazebo_simulation/script/: gotopose_main.py
gazebo_simulation/src/: aligner.cpp  attach_kinect.cpp  octomap_saver.cpp  pr2_client.cpp  transform_rectifier.cpp
planning_module/: CMakeLists.txt  mainpage.dox  manifest.xml
planning_module/appl-0.95/: README.txt
planning_module/appl-0.95/src/: Makefile  Makefile.dep
planning_module/include/planning_module/: cvp_planner.hpp  ejs_planner.hpp  gmi_planner.hpp  sarsop_user.hpp  voi_planner.hpp
planning_module/src/: cvp_planner.cpp  ejs_planner.cpp  gmi_planner.cpp  sarsop_user.cpp  test_sarsop_user.cpp  voi_planner.cpp  xml_parse_lib.c
util_pkg/: CMakeLists.txt  mainpage.dox  manifest.xml
util_pkg/include/: boost_discrete_distribution_sampler.hpp  discrete_distribution_sampler.hpp  io_utils.hpp  metric_map.hpp  misc.hpp  ood_visualization.hpp  pcd_utils.hpp
util_pkg/src/: io_utils.cpp  misc.cpp  ood_visualization.cpp  pcd_utils.cpp  test_boost_dd_sampler.cpp  test_dd_sampler.cpp
virtual_kinect_pkg/: CMakeLists.txt  mainpage.dox  manifest.xml
virtual_kinect_pkg/action/: GoToPose.action
virtual_kinect_pkg/cfg/: test_virtual_kinect.vcg
virtual_kinect_pkg/launch/: test_virtual_kinect.launch
virtual_kinect_pkg/src/: start_vkin_serv.cpp  test_virtual_kinect.cpp  virtual_kinect.cpp  vkin_offline.cpp
vision_module/: CMakeLists.txt  README  mainpage.dox  manifest.xml
vision_module/data/: omap_vps.txt  tree_vps.txt
vision_module/include/: tabletop_analyzer.hpp
vision_module/launch/: build_tree_database.launch
vision_module/script/: build_conf_mat  build_obs_model  build_obs_model_occ  build_obs_model_old  cor  extract_tree_train_pcds  study_pcd  views_to_pcd_model
vision_module/src/: build_omap.cpp  build_omap_occ.cpp  build_tree.cpp  compute_confmat.cpp  fix_omap.cpp  fix_omap_v2.cpp  nbv_tree.cpp  nbv_tree_util.cpp  pcd_from_ply.cpp  ply2traindata.cpp  score_pcd.cpp  tabletop_analyzer.cpp  tmp_fxr.cpp  views_to_pcd_model.cpp  vtree_user.cpp  vtree_user_old.cpp
(+429 files in other folders)
